--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ src/**/*.js.map
 !src/library/asmjs/wrapper.js
 !src/library/turbo/runtime.js
 !src/library/turbo/wrapper.js
+
+# Generated files in lib/
+lib/*.js
+lib/*.map
